2013-02-21  George McCollister  <george.mccollister@gmail.com>

        [GTK] Remove subresource leaks from WebKit1 and WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=108960

        Reviewed by Martin Robinson.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::dispatchDidFinishLoading): Remove resource
        if it isn't the main resource to prevent leak.
        (WebKit::FrameLoaderClient::dispatchDidFailLoading): Ditto
        * webkit/webkitwebview.cpp:
        (cleanupTemporarilyCachedSubresources): Added to cleanup subresources.
        (webkit_web_view_get_subresources): Use getSubresources from the
        documentLoader to provide subresources since resources will be removed
        from webview after loading.

2013-02-21  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Fix make distcheck.

        * GNUmakefile.am: Add -DBUILDING_WEBKIT flags to introspection
        scanner.

2013-02-15  Martin Robinson  <mrobinson@igalia.com>

        [GTK] Spread the gyp build files throughout the tree
        https://bugs.webkit.org/show_bug.cgi?id=109960

        Reviewed by Dirk Pranke.

        * gyp/Configuration.gypi.in: Remove the 'Source', since now it cannot be shared.
        * gyp/run-gyp: Update the path to the JavaScriptCore gypfile.

2013-02-15  Martin Robinson  <mrobinson@igalia.com>

        Unreviewed, rolling out parts of r142731.
        http://trac.webkit.org/changeset/142731
        https://bugs.webkit.org/show_bug.cgi?id=109672

        This patch broke the GTK+ gyp build. Roll out the changes there,
        since they were actually unnecessary.

        * gyp/Configuration.gypi.in:
        * gyp/Dependencies.gyp:
        * gyp/JavaScriptCore.gyp:
        * gyp/WTF.gyp:

2013-02-13  Allan Sandfeld Jensen  <allan.jensen@digia.com>

        [Qt] window.open passes height and width parameters even if not defined in a page
        https://bugs.webkit.org/show_bug.cgi?id=107705
